log/build_2024-12-14_22-05-07/turtle_demo_controller/stderr.log
  File "/home/thedush/ROS2_turtlesim_PID_demo/install/turtle_demo_controller/lib/python3.10/site-packages/turtle_demo_controller/turtle_controller.py", line 37
    def goal_callback(self,goal_request:GoToPose.Request)
                                                         ^
SyntaxError: expected ':'

